src/plugins/debugger/watchdata.h
@@ -99,6 +99,7 @@ public:
     bool            wantsChildren;
     bool            valueEnabled;  // Value will be enabled or not
     bool            valueEditable; // Value will be editable
+    uint            autoDerefCount; // number of levels of automatic dereferencing that has taken place (for pointer types)
     bool            outdated;      // \internal item is to be removed.
     double          time = 0;      // Time used on the dumper side to produce this item
 
