share/qtcreator/debugger/dumper.py
@@ -1312,6 +1312,11 @@ class DumperBase():
         savedCurrentChildType = self.currentChildType
         self.currentChildType = innerType.name
         derefValue.name = '*'
+        derefValue.autoDerefCount = value.autoDerefCount + 1
+
+        if derefValue.type.code != TypeCode.Pointer:
+            self.putField('autoderefcount', '{}'.format(derefValue.autoDerefCount))
+
         self.putItem(derefValue)
         self.currentChildType = savedCurrentChildType
 
@@ -2920,6 +2925,7 @@ class DumperBase():
             self.targetValue = None  # For references.
             self.isBaseClass = None
             self.nativeValue = None
+            self.autoDerefCount = 0
 
         def copy(self):
             val = self.dumper.Value(self.dumper)
